test/files/neg/macro-invalidusage-badtargs-typemacros-d.check
Macros_Test_2.scala:8: error: kinds of the type arguments (List) do not conform to the expected kinds of the type parameters (type T).
List's type parameters do not match type T's expected parameters:
type A has no type parameters, but type U has one
  val x: Foo[List](2) = new C
         ^
Macros_Test_2.scala:7: error: kinds of the type arguments (List) do not conform to the expected kinds of the type parameters (type T).
List's type parameters do not match type T's expected parameters:
type A has no type parameters, but type U has one
  class D extends Foo[List](2)
                  ^
two errors found
